# dtl-2023

./: 4 задача.ps6  LICENSE  README.md  Адреса постаматов с гео.csv
revbot/: pyproject.toml
revbot/revbot/: bot.py
